Genral fixing
