# service/structs/profile.go
@@ -1,9 +1,9 @@
 package structs
 
 type Profile struct {
-	Username    string `json:"username"`
-	Follower    int    `json:"follower"`
-	Following   int    `json:"following"`
-	PhotoNumber int    `json:"photoNumber"`
-	Photo       []int  `json:"photoIDs"`
+	Username   string  `json:"username"`
+	Follower   int     `json:"follower"`
+	Following  int     `json:"following"`
+	PhotoCount int     `json:"photoNumber"`
+	Photo      []Photo `json:"photos"`
 }
